--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: njoagleod
 Type: Package
-Title: What the Package Does (Title Case)
+Title: NJ OAG Law Enforcement Officer Diversity data package
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: 
+    person("Tor", "Gunston", , "tor.gunston@protonmail.com", role = c("aut", "cre"))
+Description: This is cleaned-up version of the NJ OAG Law Enforcement Officer 
+  Diversity database available from https://www.njoag.gov/policerecruiting/.
+License: CC0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
