Cleanup, mostly from R CMD CHECK 1) .RBuildignore data-raw and README 2) Update package "Suggests". 3) Remove stray LICENSE file. 4) Let roxygen build NAMESPACE 5) Add @source to agency document. 6) Move build_and_save_data.R to data-raw/ 7) Use portable filename for CSV files.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,14 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Suggests: 
-    njoaguof
+    dplyr,
+    knitr,
+    magrittr,
+    njoaguof,
+    readr,
+    rmarkdown,
+    stringr,
+    tidyr
 Depends: 
     R (>= 2.10)
+VignetteBuilder: knitr
