--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Install njoaguof and other dependencies.
         run: |
-          install.packages('remotes', 'rcmdcheck')
+          install.packages(c('remotes', 'rcmdcheck'))
           remotes::install_deps(dependencies = TRUE)
           remotes::install_github('https://github.com/tor-gu/njoaguof')
         shell: Rscript {0}
